fix custom css for contrast errors wave tool

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,17 +2,30 @@
 
     color: #000;
     background-color: #fff;
-    border:2px solid #00a7b5;
-    outline:1;
+    border: 2px solid #00a7b5;
+    outline: 1;
     box-shadow: none;
 
 }
 
-.btnform{
-  background: #00a7b5;
-  border: #101820;
+.btnform {
+    background: #101820;
+    border: #101820;
 }
+
 .btnform:hover {
-  background: #101820;
-  border: #00a7b5;
+    background: #00a7b5;
+    border: #101820;
+}
+
+.limit-size {
+    max-width: 10px;
+}
+
+@media (max-width: 500px) {
+
+    #username,
+    #password {
+        width: 80%;
+    }
 }
